--- a/infrastructure/aws/cloudformation/csye6225-cf-application.yaml
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.yaml
@@ -120,3 +120,160 @@ Resources:
       Tags:
       - Key: Name
         Value: !Sub ${AWS::StackName}-csye6225-rdssg
+
+# AMI Policies
+  circleci-ec2-ami:
+    Type: AWS::IAM::ManagedPolicy
+    Properties: 
+      ManagedPolicyName: "circleci-ec2-ami"
+      Users:
+        - Ref: "circleci"
+      PolicyDocument: 
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+        Action:
+        - ec2:AttachVolume
+        - ec2:AuthorizeSecurityGroupIngress
+        - ec2:CopyImage
+        - ec2:CreateImage
+        - ec2:CreateKeypair
+        - ec2:CreateSecurityGroup
+        - ec2:CreateSnapshot
+        - ec2:CreateTags
+        - ec2:CreateVolume
+        - ec2:DeleteKeyPair
+        - ec2:DeleteSecurityGroup
+        - ec2:DeleteSnapshot
+        - ec2:DeleteVolume
+        - ec2:DeregisterImage
+        - ec2:DescribeImageAttribute
+        - ec2:DescribeImages
+        - ec2:DescribeInstances
+        - ec2:DescribeInstanceStatus
+        - ec2:DescribeRegions
+        - ec2:DescribeSecurityGroups
+        - ec2:DescribeSnapshots
+        - ec2:DescribeSubnets
+        - ec2:DescribeTags
+        - ec2:DescribeVolumes
+        - ec2:DetachVolume
+        - ec2:GetPasswordData
+        - ec2:ModifyImageAttribute
+        - ec2:ModifyInstanceAttribute
+        - ec2:ModifySnapshotAttribute
+        - ec2:RegisterImage
+        - ec2:RunInstances
+        - ec2:StopInstances
+        - ec2:TerminateInstances
+        Resource: "*"
+
+  CodeDeploy-EC2-S3:
+    Type: AWS::IAM::ManagedPolicy
+    Properties: 
+      ManagedPolicyName: "CodeDeploy-EC2-S3"
+      Roles: 
+        - !Ref: "CodeDeployEC2ServiceRole"
+      PolicyDocument: 
+        Version: '2012-10-17'
+        Statement:
+        - Action:
+          - s3:Get*
+          - s3:List*
+          Effect: Allow
+          Resource: "*"
+
+  CircleCI-Upload-To-S3:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      ManagedPolicyName: "CircleCI-Upload-To-S3" 
+      Users:
+        -  "circleci"
+      PolicyDocument: 
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Action:
+          - s3:PutObject
+          Resource:
+          - "*"
+
+  CirlceCI-Code-Deploy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties: 
+      ManagedPolicyName: "CirlceCI-Code-Deploy"
+      Users:
+        - Ref: "circleci"
+      PolicyDocument: 
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Action:
+          - codedeploy:RegisterApplicationRevision
+          - codedeploy:GetApplicationRevision
+          Resource:
+          - arn:aws:codedeploy:AWS_REGION:AWS_ACCOUNT_ID:application:CODE_DEPLOY_APPLICATION_NAME
+        - Effect: Allow
+          Action:
+          - "codedeploy:CreateDeployment",
+          - "codedeploy:GetDeployment"
+          Resource:
+          - "*"
+        - Effect: Allow
+          Action:
+          - codedeploy:GetDeploymentConfig
+          Resource:
+          - !Join
+            - ":"
+            - - "arn:aws:codedeploy"
+            - !Ref AWS::Region
+            - !Ref AWS::AccountId 
+            - "deploymentconfig:CodeDeployDefault.OneAtATime"
+          - !Join 
+            - ":"
+            - - "arn:aws:codedeploy"
+            - !Ref AWS::Region
+            - !Ref AWS::AccountId
+            - "deploymentconfig:CodeDeployDefault.HalfAtATime"
+          - !Join 
+            - ":"
+            - - "arn:aws:codedeploy"
+            - !Ref AWS::Region
+            - !Ref AWS::AccountId
+            - "deploymentconfig:CodeDeployDefault.AllAtOnce"
+
+
+# create roles
+  CodeDeployEC2ServiceRole:
+    Type: AWS::IAM::Role
+    Properties: 
+      AssumeRolePolicyDocument: 
+         Version: "2012-10-17"
+         Statement: 
+           - 
+             Effect: "Allow"
+             Principal: 
+               Service: 
+                 - "ec2.amazonaws.com"
+             Action: 
+               - "sts:AssumeRole"
+      RoleName: "CodeDeployEC2ServiceRole"
+      
+  CodeDeployServiceRole:
+    Type: AWS::IAM::Role
+    Properties: 
+      ManagedPolicyArns: 
+        - "arn:aws:iam::aws:policy/service-role/AWSCodeDeployRole"
+      AssumeRolePolicyDocument: 
+        Version: "2012-10-17"
+         Statement: 
+           - 
+             Effect: "Allow"
+             Principal: 
+               Service: 
+                 - "ec2.amazonaws.com"
+             Action: 
+               - "sts:AssumeRole"
+      RoleName: "CodeDeployServiceRole"
+
+ 
