--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,9 @@ jobs:
             chmod +x packer
       - run:
           name: Validate Packer Template
-          command: ./packer validate centos-ami-template.json
+          command: 
+            cd infrastructure/aws/cloudformation
+            packer validate centos-ami-template.json
       - run:
           name: Build AMI
           command: |
