--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,6 @@ jobs:
       - run:
           name: Build AMI
           command: |
-            ./packer build \
+            packer build \
             -var 'aws_region=${AWS_REGION}' \
             centos-ami-template.json
