--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,5 @@ jobs:
       - run:
           name: Build AMI
           command: |
-            cd infrastructure/aws/cloudformation
-            ./packer build \
-            -var 'aws_region=${AWS_REGION}' \
+            ./packer build
             centos-ami-template.json
