--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,5 +28,4 @@ jobs:
       - run:
           name: Build AMI
           command: |
-            ./packer build
-            centos-ami-template.json
+            ./packer build centos-ami-template.json
