--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,4 +29,4 @@ jobs:
           name: Build AMI
           command: |
             cd infrastructure/aws/cloudformation
-            packer build -var 'aws_region=${AWS_REGION}' centos-ami-template.json
+            ./packer build -var 'aws_region=${AWS_REGION}' centos-ami-template.json
