--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,4 +27,4 @@ jobs:
       - run:
           name: Build AMI
           command: |
-            ./packer build centos-ami-template.json
+            ./packer -var  build centos-ami-template.json
