--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,4 +27,7 @@ jobs:
       - run:
           name: Build AMI
           command: |
-            ./packer -var  build centos-ami-template.json
+            ./packer build \
+            -var 'aws_region=${AWS_REGION}' \
+            -var 'subnet_id=${SUBNET_ID}' \
+            centos-ami-template.json
