--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,6 @@ jobs:
           name: Build AMI
           command: |
             ./packer build \
-            -var 'aws_region=${AWS_DEFAULT_REGION}' \
-            -var 'subnet_id=${SUBNET_ID}' \
+            -var "aws_region=${AWS_DEFAULT_REGION}" \
+            -var "subnet_id=${SUBNET_ID}" \
             centos-ami-template.json
