--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,4 +29,5 @@ jobs:
           command: |
             ./packer build \
             -var "aws_region=${AWS_DEFAULT_REGION}" \
+            -var "subnet_id=${NET_SUBNET_ID}" \
             centos-ami-template.json
